syntax = "proto3";

package centralproto.v1;

import "google/protobuf/timestamp.proto";
import "proto/v1/domain/food.proto";

option go_package = "github.com/calamity-m/reaphur/proto/v1/centralproto";

message CreateFoodRecordRequest {
  domain.v1.FoodRecord record = 1;
}

message CreateFoodRecordResponse {
  domain.v1.FoodRecord record = 1;
}

message GetFoodFilter {
  optional string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional google.protobuf.Timestamp before_time = 4;
  optional google.protobuf.Timestamp after_time = 5;
}

message GetFoodRecordsRequest {
  string request_user_id = 1;
  GetFoodFilter filter = 2;
}

message GetFoodRecordsResponse {
  repeated domain.v1.FoodRecord records = 1;
}

service CentralFoodService {
  // Simple RPC
  //
  // Create some food record in the food diary/journal
  rpc CreateFoodRecord(CreateFoodRecordRequest) returns (CreateFoodRecordResponse) {}
  // Simple RPC
  //
  // Fetch some food records from the food diary/journal
  rpc GetFoodRecords(GetFoodRecordsRequest) returns (GetFoodRecordsResponse) {}
}
